<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".ui.AdviceFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Health Tips"
            android:gravity="center"
            android:textSize="40dp"
            android:textColor="@color/tab"
            android:padding="10dp"
            />
    <TextView
        android:text="@string/head1"
        style="@style/head"
        />
    <TextView
        style="@style/paragraph"
        android:text="@string/paragraph1"/>
        <TextView
            android:text="@string/head2"
            style="@style/head"
            />
        <TextView
            style="@style/paragraph"
            android:text="@string/paragraph2"/>
        <TextView
            android:text="@string/head3"
            style="@style/head"
            />
        <TextView
            style="@style/paragraph"
            android:text="@string/paragraph3"/>
        <TextView
            android:text="@string/head4"
            style="@style/head"
            />
        <TextView
            style="@style/paragraph"
            android:text="@string/paragraph4"/>
        <TextView
            android:text="@string/head5"
            style="@style/head"
            />
        <TextView
            style="@style/paragraph"
            android:text="@string/paragraph5"/>
        <TextView
            android:text="@string/head6"
            style="@style/head"
            />
        <TextView
            style="@style/paragraph"
            android:text="@string/paragraph6"/>
        <TextView
            android:text="@string/head7"
            style="@style/head"
            />
        <TextView
            style="@style/paragraph"
            android:text="@string/paragraph7"/>
        <TextView
            android:text="@string/head8"
            style="@style/head"
            />
    </LinearLayout>

</ScrollView>